# forge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ForgeInstall.cmake  ForgeSoftwarePackage.cmake
doc/: Doxyfile
doc/pages/: cmake_project_integration.md  forge_cli.md  forge_toml.md  mainpage.md
include/forge/build_system/: BuildConfig.hpp  CMakeGenerator.hpp  TomlParser.hpp
include/forge/cli/: build.hpp
include/forge/core/: BuildRunner.hpp  BuildSystemGenerator.hpp  CacheManager.hpp  Dependency.hpp  ForgePackage.hpp  ForgeTarget.hpp  Package.hpp  Target.hpp  TomlParser.hpp  Version.hpp
src/: CMakeLists.txt
src/build_system/: CMakeGenerator.cpp  CMakeLists.txt  TomlParser.cpp
src/cli/: CMakeLists.txt  build.cpp  main.cpp
src/core/: BuildRunner.cpp  BuildSystemGenerator.cpp  CMakeLists.txt  CacheManager.cpp  ForgePackage.cpp  ForgeTarget.cpp  Package.cpp  TomlParser.cpp  Version.cpp
